# HighOrderTFEM

./: .gitignore  build.sh  build_cpu.sh  build_gpu.sh  install_kokkos.sh  readme.md  run_benchmark.sh  run_cpu.slurm.sh  run_cpu_tests.sh  run_gpu.slurm.sh  run_gpu_tests.sh
demoMeshes/: square1.grd  square2.grd  square3.grd  square4.grd  square5.grd  square6.grd  square7.grd  square8.grd
demoMeshes/Results2/: square2_b0.grd  square3_b0.grd  square4_b0.grd  square5_b0.grd  square6_b0.grd  square7_b0.grd  square8_b0.grd
highOrderTFEM/: CMakeLists.txt  main.cpp
highOrderTFEM/include/: analytical.hpp  fem.hpp  mesh.hpp  scatter_add_pattern.hpp  scatter_pattern.hpp  solver.hpp  type_magic.hpp
highOrderTFEM/src/: CMakeLists.txt
highOrderTFEM/src/fem/: CMakeLists.txt  solver.cpp
highOrderTFEM/src/matrix/: CMakeLists.txt  mass.cpp  stiff.cpp
highOrderTFEM/src/mesh/: CMakeLists.txt  mesh.cpp  mesh_color.cpp
visualization/: accuracy_data_fuzzed.csv  accuracy_data_unfuzzed.csv  benchmark_data.csv  mesh.py  visualize_accuracy.py  visualize_benchmarks.py  visualize_coloring.py  visualize_points.py
